fixed cards so that they fit on larger screens without flipping out of place

--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -1,3 +1,4 @@
+
 .borderWrapper {
 	background: $stripe-color;
 	padding: 1.5rem 1.5rem 0 1.5rem;
@@ -6,7 +7,7 @@
 
 .gameBoard {
 	display: grid;
-	grid-template-columns: repeat(6, 1fr);
+	grid-template-columns: repeat(6, 150px);
 	grid-gap: 1rem;
 	justify-content: center;
 	background: $dark-color;
