--- a/styles/sass/_tablet.scss
+++ b/styles/sass/_tablet.scss
@@ -1,3 +1,9 @@
+@media screen and (max-width: 1100px) {
+	.gameBoard {
+		grid-template-columns: repeat(6, 1fr);
+	}
+}
+
 @media screen and (max-width: 768px) {
 	.btn {
 		padding: 1rem 2rem;
@@ -15,8 +21,6 @@
 			font-size: 2rem;
 		}
 	}
-
-	
 
 	.infoTurn {
 		font-size: 1rem;
