--- a/styles/styles.css
+++ b/styles/styles.css
@@ -457,8 +457,8 @@ header input[type='radio']:checked + label > img {
 .gameBoard {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[6];
-      grid-template-columns: repeat(6, 1fr);
+  -ms-grid-columns: (150px)[6];
+      grid-template-columns: repeat(6, 150px);
   grid-gap: 1rem;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -543,6 +543,13 @@ header input[type='radio']:checked + label > img {
 
 .gameMessage .statement {
   font-size: 3rem;
+}
+
+@media screen and (max-width: 1100px) {
+  .gameBoard {
+    -ms-grid-columns: (1fr)[6];
+        grid-template-columns: repeat(6, 1fr);
+  }
 }
 
 @media screen and (max-width: 768px) {
